resources-manifest/sa-db-storehouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-storehouse-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sa-storehouse-db
  template:
    metadata:
      labels:
        app: sa-storehouse-db
    spec:
      containers:
        - name: storehouse-db
          image: postgres:13
          ports:
            - containerPort: 5432
