resources-manifest/sa-db-tgbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-tgbot-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sa-tgbot-db
  template:
    metadata:
      labels:
        app: sa-tgbot-db
    spec:
      containers:
        - name: tgbot-db
          image: postgres:13
          ports:
            - containerPort: 5432
