resources-manifest/sa-history-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-history-app
  labels:
    app: sa-history-app
spec:
  selector:
    matchLabels:
      app: sa-history-app
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-history-app
    spec:
      containers:
        - image: vladislavlushkov/history
          imagePullPolicy: Always
          name: sa-history-app
          ports:
            - containerPort: 8080
