resources-manifest/db-history-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-history-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: sa-history-db
