resources-manifest/db-tgbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-tgbot-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: sa-tgbot-db
