resources-manifest/service-sa-history-app-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-history-app-lb
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 30008
  selector:
    app: sa-history-app
