resources-manifest/service-sa-storehouse-app-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-storehouse-app-lb
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: sa-storehouse-app
